[Daytrader] Set the perm size